fix validatin, rtl, dark mode

--- a/wp-content/themes/dff/includes/css/main.css
+++ b/wp-content/themes/dff/includes/css/main.css
@@ -1694,12 +1694,6 @@ button.swiper-pagination-bullet {
   display: none;
 }
 
-.course-quiz {
-  /* .has-error input[type="radio"] ~ label,
-   .has-error input[type="checkbox"] ~ label {
-       border-color: red;
-   }*/
-}
 .course-quiz__top {
   border-bottom: 1px solid #CCCCCC;
   display: flex;
@@ -1828,9 +1822,9 @@ button.swiper-pagination-bullet {
   content: "";
   position: absolute;
   left: 21px;
-  top: 15px;
   opacity: 0;
   z-index: 1;
+  margin-top: -3px;
   transform: rotate(45deg);
   height: 14px;
   width: 7px;
@@ -1890,7 +1884,6 @@ button.swiper-pagination-bullet {
   content: "";
   position: absolute;
   left: 19px;
-  top: 18px;
   opacity: 0;
   height: 10px;
   width: 10px;
@@ -2030,6 +2023,7 @@ button.swiper-pagination-bullet {
   background-color: #959595;
   border: 1px solid #959595;
   cursor: not-allowed;
+  color: #fff;
 }
 .course-quiz .actions ul li:first-child a, .course-quiz__buttons ul li:first-child a {
   background-color: transparent;
@@ -2155,6 +2149,46 @@ button.swiper-pagination-bullet {
   border-color: red;
 }
 
+.rtl .nice-select {
+  text-align: right;
+  padding: 0px 5px 0px 45px;
+}
+.rtl .nice-select .list {
+  left: inherit;
+  right: 0;
+}
+.rtl .nice-select:after {
+  left: 10px;
+  right: inherit;
+}
+@media (max-width: 767px) {
+  .rtl .course-quiz__content {
+    text-align: right;
+  }
+}
+.rtl .course-quiz__checkbox label {
+  text-align: right;
+}
+.rtl .course-quiz__checkbox label:after {
+  left: initial;
+  right: 15px;
+}
+.rtl .course-quiz__checkbox label:before {
+  left: initial;
+  right: 21px;
+}
+.rtl .course-quiz__radio label {
+  text-align: right;
+}
+.rtl .course-quiz__radio label:after {
+  left: initial;
+  right: 15px;
+}
+.rtl .course-quiz__radio label:before {
+  left: initial;
+  right: 19px;
+}
+
 .dark-mode .course-quiz__top {
   color: #ffffff;
   border-bottom-color: rgba(255, 255, 255, 0.5);
@@ -2211,10 +2245,10 @@ button.swiper-pagination-bullet {
   color: #ffffff;
 }
 .dark-mode .course-quiz__progress-subtitle {
-  color: #ffffff;
+  color: rgba(255, 255, 255, 0.5);
 }
 .dark-mode .course-quiz__progress-result {
-  color: #ffffff;
+  color: rgba(255, 255, 255, 0.5);
 }
 .dark-mode .course-quiz__progress-result span {
   color: #ffffff;
@@ -2397,6 +2431,10 @@ button.swiper-pagination-bullet {
   transition: 0.3s;
 }
 
+.archive-courses-list p a::before {
+  background-color: var(--color-primary);
+  bottom: 2px;
+}
 .archive-courses-list .course-item {
   flex-grow: 0;
   flex-shrink: 0;
@@ -3155,6 +3193,46 @@ button.swiper-pagination-bullet {
 }
 .rtl .my-progress-content .my-progres-modules ul li.active::before, .rtl .my-progress-content .my-progres-modules ul li:hover::before {
   right: -25px;
+}
+
+.dark-mode .my-progress-content .my-progres-modules ul li {
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+.dark-mode .my-progress-content .my-progres-modules ul li.active, .dark-mode .my-progress-content .my-progres-modules ul li:hover {
+  color: #fff;
+}
+.dark-mode .my-progress-content .my-progres-modules ul li.active::before, .dark-mode .my-progress-content .my-progres-modules ul li:hover::before {
+  background: #fff;
+}
+.dark-mode .my-progress-content .tabs-content .progress-wrapper .progress-content h5 {
+  color: #fff;
+}
+.dark-mode .my-progress-content .tabs-content .progress-wrapper .progress-content p {
+  color: rgba(255, 255, 255, 0.5);
+}
+@media only screen and (min-width: 993px) {
+  .dark-mode .my-progress-content .columns .main-content {
+    border-right-color: rgba(255, 255, 255, 0.2);
+  }
+}
+.dark-mode .my-progress-content .columns .course-sidebar {
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+.dark-mode .my-progress-content .columns .main-content .content .progress-wrapper {
+  background: #000000;
+  border-color: rgba(255, 255, 255, 0.1);
+}
+.dark-mode .my-progress-content .columns .main-content .content .progress-wrapper .module-header {
+  border-bottom-color: rgba(255, 255, 255, 0.1);
+}
+.dark-mode .my-progress-content .columns .main-content .content .progress-wrapper .module-header h2 {
+  color: #fff;
+}
+.dark-mode .my-progress-content .columns .main-content .content .progress-wrapper .exam-footer button,
+.dark-mode .my-progress-content .columns .main-content .content .progress-wrapper .exam-footer a {
+  background-color: #fff;
+  color: #000;
+  border-color: #fff;
 }
 
 /*# sourceMappingURL=main.css.map*/
